# robotics

./: README.md  info.txt
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/kinematics/: wheels_rpm.h
devel/include/pub_sub/: parametersConfig.h
devel/include/solver/: Reset.h  ResetRequest.h  ResetResponse.h  parametersConfig.h
devel/lib/callbacks/: pub_callbacks  sub_callbacks_base  sub_callbacks_v1  sub_callbacks_v2  sub_callbacks_v3
devel/lib/kinematics/: kinematics  kinematics_node
devel/lib/pkgconfig/: callbacks.pc  kinematics.pc  pub_sub.pc  ros_launch.pc  solver.pc  tf_examples.pc
devel/lib/python2.7/dist-packages/kinematics/msg/: _wheels_rpm.py
devel/lib/python2.7/dist-packages/pub_sub/cfg/: parametersConfig.py
devel/lib/python2.7/dist-packages/pub_sub/msg/: _Num.py
devel/lib/python2.7/dist-packages/pub_sub/srv/: _Reset.py
devel/lib/python2.7/dist-packages/solver/cfg/: parametersConfig.py
devel/lib/python2.7/dist-packages/solver/srv/: _Reset.py
devel/lib/solver/: client  solver_node
devel/lib/tf_examples/: tf2_broad  tf_broad
devel/share/callbacks/cmake/: callbacksConfig.cmake
devel/share/common-lisp/ros/kinematics/msg/: _package.lisp  _package_wheels_rpm.lisp  kinematics-msg.asd  wheels_rpm.lisp
devel/share/common-lisp/ros/solver/srv/: Reset.lisp  _package.lisp  _package_Reset.lisp  solver-srv.asd
devel/share/gennodejs/ros/kinematics/msg/: wheels_rpm.js
devel/share/gennodejs/ros/solver/srv/: Reset.js
devel/share/kinematics/cmake/: kinematics-msg-paths.cmake  kinematicsConfig.cmake
devel/share/pub_sub/cmake/: pub_sub-msg-extras.cmake  pub_sub-msg-paths.cmake  pub_subConfig.cmake
devel/share/pub_sub/docs/: parametersConfig-usage.dox  parametersConfig.wikidoc
devel/share/ros_launch/cmake/: ros_launchConfig.cmake
devel/share/roseus/ros/kinematics/: manifest.l
devel/share/roseus/ros/kinematics/msg/: wheels_rpm.l
devel/share/roseus/ros/solver/: manifest.l
devel/share/roseus/ros/solver/srv/: Reset.l
devel/share/solver/cmake/: solver-msg-paths.cmake  solverConfig.cmake
devel/share/solver/docs/: parametersConfig-usage.dox  parametersConfig.dox  parametersConfig.wikidoc
devel/share/tf_examples/cmake/: tf_examplesConfig.cmake
src/: info.txt
src/amcl/: CMakeLists.txt  package.xml
src/amcl/launch/: start.launch
src/amcl1/: CMakeLists.txt  mymap.pgm  mymap.yaml  package.xml
src/amcl1/launch/: start.launch  start_saver.launch
src/amcl1/src/: path.cpp
src/callbacks/: CMakeLists.txt
src/callbacks/launch/: launch_base.launch  launch_v1.launch  launch_v2.launch  launch_v3.launch
src/callbacks/src/: pub.cpp  sub_v3.cpp
src/fuse/: CMakeLists.txt  package.xml
src/fuse/launch/: start.launch
src/kinematics/: CMakeLists.txt
src/kinematics/launch/: start.launch
src/kinematics/src/: kinematicsNode.cpp  kinematicsNode.h
src/launch/: start.launch
src/mapping/: CMakeLists.txt  package.xml
src/mapping/launch/: 2start.launch  start.launch
src/mapping/src/: odom.cpp
src/ros_launch/: CMakeLists.txt
src/ros_launch/launch/: start.launch
src/ros_launch/src/: sub_base.cpp  sub_v1.cpp  sub_v2.cpp
src/solver/: CMakeLists.txt  package.xml
src/solver/cfg/: parameters.cfg
src/solver/launch/: start.launch
src/solver/src/: client.cpp  solverMain.cpp  solverNode.cpp  solverNode.h
src/solver/srv/: Reset.srv
src/tf_examples/: CMakeLists.txt
src/tf_examples/launch/: turtle.launch
src/tf_examples/src/: broadcaster.cpp
